// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductPlanningPanel should handle scenario where 3 unsaved added items shown in sequence 1`] = `
<div>
  <div
    class="backlogItemPlanningPanel"
  >
    [Mock SimpleDivider]
    [Mock BacklogItemDetailForm className="backlogItemUserStoryFormRow" instanceId=5000 externalId=item-1-added id=fake-id-1]
    [Mock SimpleDivider]
    [Mock BacklogItemDetailForm className="backlogItemUserStoryFormRow" instanceId=5001 externalId=item-2-added id=fake-id-2]
    [Mock SimpleDivider]
    [Mock BacklogItemDetailForm className="backlogItemUserStoryFormRow" instanceId=5002 externalId=item-3-added id=fake-id-3]
    [Mock SimpleDivider]
    <div
      class="backlogItemPlanningActionPanel"
    >
      [Mock AddButton itemName=story]
      [Mock AddButton itemName=issue]
    </div>
    [Mock SimpleDivider]
    [Mock BacklogItemCard internalId=fake-id-4 itemId=item-4-loaded titleText="loaded story 4" marginBelowItem=true]
    [Mock SimpleDivider]
  </div>
</div>
`;

exports[`ProductPlanningPanel should handle scenario where unsaved form visible and user switches from edit to view mode 1`] = `
<div>
  <div
    class="backlogItemPlanningPanel"
  >
    [Mock SimpleDivider]
    [Mock BacklogItemCard internalId=fake-id-1 itemId=item-1-added titleText="added story 1" marginBelowItem=true]
    [Mock SimpleDivider]
    [Mock SimpleDivider]
    [Mock BacklogItemCard internalId=fake-id-2 itemId=item-2-loaded titleText="loaded story 2" marginBelowItem=true]
    [Mock SimpleDivider]
  </div>
</div>
`;

exports[`ProductPlanningPanel should include spacing between added items, action buttons and loaded items 1`] = `
<div>
  <div
    class="backlogItemPlanningPanel"
  >
    [Mock SimpleDivider]
    [Mock BacklogItemDetailForm className="backlogItemUserStoryFormRow" instanceId=1000 externalId=item-1-added id=fake-id-1]
    [Mock SimpleDivider]
    <div
      class="backlogItemPlanningActionPanel"
    >
      [Mock AddButton itemName=story]
      [Mock AddButton itemName=issue]
    </div>
    [Mock SimpleDivider]
    [Mock BacklogItemCard internalId=fake-id-2 itemId=item-2-loaded titleText="loaded story 2" marginBelowItem=true]
    [Mock SimpleDivider]
    [Mock BacklogItemCard internalId=fake-id-3 itemId=item-3-loaded titleText="loaded story 3" marginBelowItem=true]
    [Mock SimpleDivider]
  </div>
</div>
`;

exports[`ProductPlanningPanel should include spacing between added saved, added unsaved, and loaded item 1`] = `
<div>
  <div
    class="backlogItemPlanningPanel"
  >
    [Mock SimpleDivider]
    [Mock BacklogItemCard internalId=fake-id-1 itemId=item-1-added titleText="added story 1" marginBelowItem=true]
    [Mock SimpleDivider]
    [Mock BacklogItemDetailForm className="backlogItemUserStoryFormRow embeddedBacklogItemUserStoryFormRow" instanceId=2001 externalId=item-2-added id=fake-id-2]
    [Mock SimpleDivider]
    <div
      class="backlogItemPlanningActionPanel"
    >
      [Mock AddButton itemName=story]
      [Mock AddButton itemName=issue]
    </div>
    [Mock SimpleDivider]
    [Mock BacklogItemCard internalId=fake-id-3 itemId=item-3-loaded titleText="loaded story 3" marginBelowItem=true]
    [Mock SimpleDivider]
  </div>
</div>
`;

exports[`ProductPlanningPanel should not include double spacing between added saved, added unsaved and action buttons 1`] = `
<div>
  <div
    class="backlogItemPlanningPanel"
  >
    [Mock SimpleDivider]
    [Mock BacklogItemCard internalId=fake-id-1 itemId=item-1-added titleText="added story 1" marginBelowItem=true]
    [Mock SimpleDivider]
    [Mock BacklogItemDetailForm className="backlogItemUserStoryFormRow embeddedBacklogItemUserStoryFormRow" instanceId=3001 externalId=item-2-added id=fake-id-2]
    <div
      class="backlogItemPlanningActionPanel"
    >
      [Mock AddButton itemName=story]
      [Mock AddButton itemName=issue]
    </div>
  </div>
</div>
`;
